tests/spec/fail/text_split_invalid_sep.aja
import (
    "modules/text"
)

print(text.splitChar("a,b", "--"))
